[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["joe barhouch <joe.barhouch@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
neo4j-advanced-rag = {path = "packages/neo4j-advanced-rag", develop = true}
termcolor = "^2.4.0"
python-dotenv = "^1.0.1"
wikipedia = "^1.4.0"
neomodel = "^5.3.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
